# cartographer_stripped

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
config/: vlp16-imu.urdf.xacro
include/cartographer_stripped/: ceres_scan_matcher_3d.h
include/cartographer_stripped/common/: ceres_solver_options.h  configuration_file_resolver.h  lua_parameter_dictionary.h  lua_parameter_dictionary_test_helpers.h  math.h  msg_conversion.h  port.h  tf_bridge.h  time.h  time_conversion.h
include/cartographer_stripped/mapping/: hybrid_grid.h  id.h  imu_tracker.h  interpolated_grid.h  local_trajectory_builder_3d.h  local_trajectory_builder_options_3d.h  motion_filter.h  pose_extrapolator.h  probability_values.h  range_data_collator.h  range_data_inserter_3d.h  rotation_parameterization.h  submap_3d.h  submaps.h  trajectory_node.h
include/cartographer_stripped/mapping/scan_matching/: ceres_scan_matcher_3d.h  occupied_space_cost_function_3d.h  real_time_correlative_scan_matcher_3d.h  real_time_correlative_scan_matcher_options.h  rotation_delta_cost_functor_3d.h  rotational_scan_matcher.h  translation_delta_cost_functor_3d.h
include/cartographer_stripped/metrics/: counter.h  family_factory.h  gauge.h  histogram.h
include/cartographer_stripped/optimization/: ceres_pose.h
include/cartographer_stripped/plugins/: trajectory_builder_interface.h
include/cartographer_stripped/proto/: adaptive_voxel_filter_options.proto  ceres_scan_matcher_options_3d.proto  ceres_solver_options.proto  local_trajectory_builder_options_3d.proto  motion_filter_options.proto  range_data_inserter_options_3d.proto  real_time_correlative_scan_matcher_options.proto  submaps_options_3d.proto
include/cartographer_stripped/scan_matching/: ceres_scan_matcher_3d.h
include/cartographer_stripped/sensor/: compressed_point_cloud.h  imu_data.h  odometry_data.h  point_cloud.h  range_data.h  rangefinder_point.h  timed_point_cloud_data.h  voxel_filter.h
include/cartographer_stripped/transform/: rigid_transform.h  rigid_transform_test_helpers.h  transform.h
launch/: local_trajectory_builder_3d.launch  local_trajectory_manager.launch  nodelet_manager.launch  robot_state_publisher.launch
lua_config/: trajectory_builder_3d_options.lua
nodes/: local_trajectory_builder_3d_node.cpp  local_trajectory_manager.cpp
src/common/: ceres_solver_options.cc  configuration_file_resolver.cc  lua_parameter_dictionary.cc  msg_conversion.cc  tf_bridge.cc  time.cc  time_conversion.cc
src/mapping/: imu_tracker.cc  local_trajectory_builder_3d.cc  local_trajectory_builder_options_3d.cc  motion_filter.cc  pose_extrapolator.cc  probability_values.cc  range_data_collator.cc  range_data_inserter_3d.cc  submap_3d.cc
src/mapping/scan_matching/: ceres_pose.cc  ceres_scan_matcher_3d.cc  real_time_correlative_scan_matcher_3d.cc  real_time_correlative_scan_matcher_options.cc  rotational_scan_matcher.cc
src/metrics/: counter.cc  gauge.cc  histogram.cc
src/plugins/: local_trajectory_builder_3d_plugin.cpp
src/sensor/: compressed_point_cloud.cc  point_cloud.cc  range_data.cc  voxel_filter.cc
src/transform/: rigid_transform.cc
startup/carto_stripped_test/: session.yml  start.sh
startup/carto_stripped_test/custom_config/: carto_stripped_options.lua  rviz_carto_stripped_red.rviz
test/: ceres_scan_matcher_3d_test.cc  hybrid_grid_test.cc  interpolated_grid_test.cc  local_trajectory_builder_3d_test.cc  real_time_correlative_scan_matcher_3d_test.cc
