<?xml version="1.0"?>
<package format="2">
  <name>cartographer_stripped</name>
  <version>0.0.0</version>
  <description>The cartographer_stripped package</description>

  <maintainer email="lmark@todo.todo">lmark</maintainer>
  <license>TODO</license>

  <depend>nodelet</depend>
  <build_depend>uav_ros_lib</build_depend>
  <exec_depend>uav_ros_lib</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
